--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,14 +4,14 @@ import WaveBackground from '../components/WaveBackground.astro';
 import Countdown from '../components/Countdown.astro';
 import Hero from '../components/Hero.astro';
 import Innovations from '../components/Innovations.astro';
-import VideoSection from '../components/VideoSection.astro';
+import YoutubePresentation from '../components/YoutubePresentation.astro';
 ---
 
 <Layout>
 	<WaveBackground />
 	<main>
 		<Hero />
-		<Countdown />
+		<YoutubePresentation />
 		<Innovations />
 		<!-- <VideoSection />-->
 	</main>
